[gd_scene load_steps=3 format=3 uid="uid://donm244c8a5wk"]

[ext_resource type="Script" path="res://scripts/room_generation/Gen2/room_variation.gd" id="1_c6f0w"]
[ext_resource type="MeshLibrary" uid="uid://bm7j5i61hqx4s" path="res://assets/models/gothic_library_section/grid_based_tiles/grid_based_mesh_library.tres" id="1_ncpn8"]

[node name="RoomVariation" type="Node3D"]
script = ExtResource("1_c6f0w")

[node name="Wall_North" type="GridMap" parent="."]
mesh_library = ExtResource("1_ncpn8")
cell_size = Vector3(2, 0.9, 2)
cell_center_y = false

[node name="Wall_South" type="GridMap" parent="."]
mesh_library = ExtResource("1_ncpn8")
cell_size = Vector3(2, 0.9, 2)
cell_center_y = false

[node name="Doorways" type="GridMap" parent="."]
mesh_library = ExtResource("1_ncpn8")
cell_size = Vector3(2, 0.9, 2)
cell_center_y = false

[node name="Wall_East" type="GridMap" parent="."]
mesh_library = ExtResource("1_ncpn8")
cell_size = Vector3(2, 0.9, 2)
cell_center_y = false

[node name="Wall_West" type="GridMap" parent="."]
mesh_library = ExtResource("1_ncpn8")
cell_size = Vector3(2, 0.9, 2)
cell_center_y = false

[node name="Edging" type="GridMap" parent="."]
mesh_library = ExtResource("1_ncpn8")
cell_octant_size = 4
cell_center_y = false

[node name="Ledge" type="GridMap" parent="."]
mesh_library = ExtResource("1_ncpn8")
cell_size = Vector3(2, 0.9, 2)
cell_center_y = false

[node name="Floor" type="GridMap" parent="."]
mesh_library = ExtResource("1_ncpn8")
cell_size = Vector3(2, 0.9, 2)
cell_center_y = false

[node name="Doors" type="Node3D" parent="."]
